<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.harmonicatulashop.ui.account.viewmodels.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.account.activities.SignUpActivity">

        <TextView
            android:id="@+id/all_fields_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fields_red"
            android:textColor="@color/red"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/input_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.855"
            android:visibility="gone" />

        <TextView
            android:id="@+id/input_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_login"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.935" />

        <EditText
            android:id="@+id/sign_up_login"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:autofillHints=""
            android:background="@drawable/text_input_bg"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.297" />

        <TextView
            android:id="@+id/input_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_input"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_login"
            app:layout_constraintVertical_bias="0.851" />

        <EditText
            android:id="@+id/sign_up_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:autofillHints=""
            android:background="@drawable/text_input_bg"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_login"
            app:layout_constraintVertical_bias="0.123" />

        <TextView
            android:id="@+id/repeat_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_password"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_password_repeat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_password"
            app:layout_constraintVertical_bias="0.851" />

        <EditText
            android:id="@+id/sign_up_password_repeat"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:autofillHints=""
            android:background="@drawable/text_input_bg"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_password"
            app:layout_constraintVertical_bias="0.154" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="@{()->viewModel.onClickSignUpButton()}"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_password_repeat" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>