<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.harmonicatulashop.ui.catalog.viewmodels.BayanViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/bayan_icon"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@{viewModel.bayan.iconUri}"
            android:contentDescription="@string/bayan_icon" />

        <TextView
            android:id="@+id/name"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:text="@{viewModel.bayan.NAME + ' ' + viewModel.bayan.range}"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bayan_icon"
            app:layout_constraintVertical_bias="0.04" />

        <Button
            android:id="@+id/add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:layout_marginStart="16dp"
            android:text="@string/add_to_cart"
            app:layout_constraintStart_toEndOf="@+id/bayan_icon"
            app:layout_constraintTop_toBottomOf="@+id/name"
            android:onClick="@{()->viewModel.addToCart()}" />

        <ImageButton
            android:id="@+id/add_to_favourites"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintStart_toEndOf="@+id/add_to_cart"
            app:srcCompat="@drawable/baseline_favorite_border_24"
            android:contentDescription="@string/add_to_favourites"
            android:onClick="@{()->viewModel.addToFavourites()}"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>