<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.harmonicatulashop.ui.account.viewmodels.AdminSettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/admin_settings_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.account.fragments.AdminSettingsFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/admin_login_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_login"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.089"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.053" />

                <EditText
                    android:id="@+id/edit_admin_login"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toStartOf="@id/admin_login_settings"
                    app:layout_constraintTop_toBottomOf="@+id/admin_login_settings" />

                <TextView
                    android:id="@+id/admin_password_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/edit_admin_login"
                    app:layout_constraintStart_toStartOf="@id/admin_login_settings"/>

                <EditText
                    android:id="@+id/edit_admin_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    app:layout_constraintStart_toStartOf="@+id/admin_password_settings"
                    app:layout_constraintTop_toBottomOf="@+id/admin_password_settings"/>

                <TextView
                    android:id="@+id/admin_repeat_password_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/repeat_password"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/edit_admin_password"
                    app:layout_constraintStart_toStartOf="@+id/admin_password_settings"/>

                <EditText
                    android:id="@+id/repeat_edit_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    app:layout_constraintTop_toBottomOf="@id/admin_repeat_password_settings"
                    app:layout_constraintStart_toStartOf="@id/admin_repeat_password_settings" />

                <TextView
                    android:id="@+id/admin_name_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/settings_name"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintHorizontal_bias="0.089"
                    app:layout_constraintStart_toStartOf="@id/admin_repeat_password_settings"
                    app:layout_constraintTop_toBottomOf="@id/repeat_edit_password"
                    app:layout_constraintVertical_bias="0.053" />

                <EditText
                    android:id="@+id/edit_admin_name"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toStartOf="@id/admin_name_settings"
                    app:layout_constraintTop_toBottomOf="@+id/admin_name_settings" />

                <TextView
                    android:id="@+id/admin_lastname_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/settings_lastname"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@id/admin_name_settings"
                    app:layout_constraintTop_toBottomOf="@+id/edit_admin_name" />

                <EditText
                    android:id="@+id/edit_admin_lastname"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toStartOf="@id/admin_lastname_settings"
                    app:layout_constraintTop_toBottomOf="@+id/admin_lastname_settings" />

                <TextView
                    android:id="@+id/wrong_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/wrong_password"
                    android:textColor="@color/red"
                    android:textSize="18sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edit_admin_lastname"/>

                <TextView
                    android:id="@+id/confirm_text_view_admin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/confirm_changes"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wrong_password" />

                <EditText
                    android:id="@+id/confirm_changes_admin"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:inputType="textPassword"
                    android:background="@drawable/text_input_bg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/confirm_text_view_admin" />

                <Button
                    android:id="@+id/confirm_admin_changes_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="40dp"
                    android:text="@string/save_changes"
                    app:layout_constraintTop_toBottomOf="@+id/confirm_changes_admin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:onClick="@{()->viewModel.saveChanges()}"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>