<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.harmonicatulashop.ui.fragments.AccordionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.AccordionFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/accordion_image"
                    android:layout_width="match_parent"
                    android:layout_height="340dp"
                    android:contentDescription="@string/harmonica_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/accordion_title"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/accordion_image" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.019"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/accordion_title" />

                <Button
                    android:id="@+id/add_accordion_to_cart"
                    android:layout_width="130dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:text="@string/add_to_cart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.059"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/price"
                    android:onClick="@{()->viewModel.addToCart()}" />

                <Button
                    android:id="@+id/add_accordion_to_favourites"
                    android:layout_width="170dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:text="@string/add_to_favourites"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.782"
                    app:layout_constraintStart_toEndOf="@+id/add_accordion_to_cart"
                    app:layout_constraintTop_toBottomOf="@+id/price"
                    android:onClick="@{()->viewModel.addToFavourites()}" />

                <TextView
                    android:id="@+id/range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/range"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.033"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/add_accordion_to_cart" />

                <TextView
                    android:id="@+id/options_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/options"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.041"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/range" />

                <TextView
                    android:id="@+id/accordion_options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/options_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>